WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114752
REGRESSION(
r148584
): WebKit nightly builds don't load any page
https://bugs.webkit.org/show_bug.cgi?id=114752
Summary
REGRESSION(r148584): WebKit nightly builds don't load any page
Ryosuke Niwa
Reported
2013-04-17 11:13:06 PDT
Launch WebKit nightly. It doesn't even load /Applications/WebKit.app/Contents/Resources/start.html
Attachments
Patch
(2.44 KB, patch)
2013-04-17 12:09 PDT
,
Ryosuke Niwa
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-04-17 12:09:10 PDT
Created
attachment 198593
[details]
Patch
Ryosuke Niwa
Comment 2
2013-04-17 12:13:20 PDT
Committed
r148625
: <
http://trac.webkit.org/changeset/148625
>
Radar WebKit Bug Importer
Comment 3
2013-04-17 12:15:31 PDT
<
rdar://problem/13676094
>
Benjamin Poulain
Comment 4
2013-04-17 20:44:55 PDT
***
Bug 114723
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5
2013-04-18 10:34:22 PDT
***
Bug 114753
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6
2013-04-18 10:34:42 PDT
***
Bug 114746
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 7
2013-04-18 10:34:51 PDT
***
Bug 114754
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug